[package]
name = "cascading-tic-tac-toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.1"
bevy_kira_audio = "0.19.0"
image = "0.25.1"
winit = "0.29.15"

[build-dependencies]
embed-resource = "2.4.2"

[dev-dependencies]
test-case = "3.3.1"
